--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.ICEPdf.classpath}:\
     ${libs.Thumbnailinator.classpath}:\
-    ${libs.PDFBox.classpath}
+    ${libs.PDFBox.classpath}:\
+    ${reference.com_sun_pdfview.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,6 +73,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.com_sun_pdfview=../com.sun.pdfview
+reference.com_sun_pdfview.jar=${project.com_sun_pdfview}/dist/com.sun.pdfview.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
